# whisper_subtitles

./: .gitignore  KatyPerry-Firework.srt  LICENSE  README.md  __init__.py  __main__.py  cli.py  pyproject.toml  requirements.txt  result.json  setup.py  splitLongLines.py  subs.srt  test1.srt  utils.py  whisper_subtitles.py
.github/workflows/: build-and_publish.yml  integration.yml
sample/: test0.srt  test0Result.txt  test0_whisper_cpp_medium.en.srt  test0_whisper_result.json
samples/: test0.srt  test0_whisper_cpp_base.en.srt  test0_whisper_result.json  test1_openai.srt
src/: __init__.py  whisper_subtitles.py
tests/: test_openai_subtitles.py  test_whisper_subtitles.py
whisper_subtitles/: __main__.py  main.py  openai.py  postprocessing.py  whisper_cpp.py
