[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm[toml]>=7.0"]
build-backend = "setuptools.build_meta"

[project]
name = "whisper_subtitles"
dynamic = ["version"]
description = "Generate subtitles with whisper.cpp"
authors = [{name = "Brendan Jarvis", email = "brendan.jarvis@example.com"}]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/brendan-jarvis/whisper_subtitles"

[project.optional-dependencies]
dev = ["pytest>=7", "black"]

[project.scripts]
whisper-subtitles = "whisper_subtitles.cli:main"

# THIS IS THE KEY SECTION
[tool.setuptools_scm]
# Write version to a file so it's importable later
write_to = "whisper_subtitles/_version.py"
# Use git tags only — NO import fallback
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"
# CRITICAL: Disable import-based version detection
fallback_version = "0.0.0"
# Prevent import attempt
package_dir = {"" = "whisper_subtitles"}
# Ensure Git is used
git_describe_command = "git describe --dirty --tags --long --match v*"
