[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm[toml]>=7.0"]
build-backend = "setuptools.build_meta"

[project]
name = "whisper_subtitles"
dynamic = ["version"]
description = "Generate subtitles with whisper.cpp"
authors = [{name = "Brendan Jarvis", email = "brendan.jarvis@example.com"}]
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
dependencies = [
    "numpy>=1.23.5",
    "openai-whisper",
    "pysubs2",
]

[project.urls]
Homepage = "https://github.com/brendan-jarvis/whisper_subtitles"

[project.optional-dependencies]
dev = ["pytest>=7", "black"]

[project.scripts]
whisper-subtitles = "whisper_subtitles.cli:main"

[tool.setuptools.packages.find]
include = ["whisper_subtitles*"]

[tool.setuptools_scm]
write_to = "whisper_subtitles/_version.py"
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"
fallback_version = "0.0.0"
git_describe_command = "git describe --dirty --tags --long --match v*"
